2001-03-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (draw_clipped_decorations):
	* fvwm/window_flags.h (SET_WINDOW_BORDER_DRAWN):
	* fvwm/fvwm.h:
	force resetting the window border background on initial border drawing

	* libs/ColorUtils.c (GetHiliteColor):
	(GetShadowColor):
	fixed parameters to GetShadowOrHiliteColor calls screwing up colour
	calculations

	* fvwm/events.c (HandleMapRequestKeepRaised):
	icon position hint was sometimes used although it was not set
	(fake_map_unmap_notify):
	(HandleMapRequestKeepRaised):
	simply fake a MapNotify if a MapRequest for an already mapped window
	arrives
	fake an UnmapNotify when a window starts iconic

2001-03-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (ProcessNewStyle):
	fixed reversers window group options

2001-02-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	* fvwm/style.c (ProcessNewStyle):
	* fvwm/style.h:
	* fvwm/window_flags.h (DO_ICONIFY_WINDOW_GROUPS):
	* fvwm/fvwm.h (struct):
	* fvwm/stack.h (mark_transient_subtree):
	* fvwm/stack.c (mark_transient_subtree):
	(collect_transients_recursive):
	* fvwm/icons.c (DeIconify):
	(Iconify):
	new styles IconifyWindowGroups/IconifyWindowGroupsOff.

	* fvwm/placement.c (PlaceWindow):
	fixed a small bug in window group handling

	* fvwm/placement.c (PlaceWindow):
	* fvwm/style.c (ProcessNewStyle):
	* fvwm/style.h:
	* fvwm/window_flags.h (DO_IGNORE_WINDOW_GROUP_HINT):
	* fvwm/fvwm.h (struct):
	new styles KeepWindowGroupsOnDesk/ScatterWindowGroups for use with
	mozilla which misuses the window group hint

2001-02-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (do_menu):
	gixed event selection when returning from submenus

	* fvwm/placement.c (PlaceWindow):
	small performance enhancement

	* fvwm/gnome.c:
	commented unused code

2001-02-26  Dan Espen  <dane@mk.telcordia.com>

	* NEWS:  Update  news with 2.2.5,  identify   2.2.5 as  the latest
 	stable release.

2001-02-26  Dominik Vogt  <dominik.vogt@gmx.de>
